--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.17.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
