--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>5.17.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
