adjust pom file: remove hardcoded suite

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,11 @@
 baseUrl=${baseUrl}
+host=${host}
+username=${username}
+pw=${password}
+
+browser=chrome
+
+timeoutMilliSeconds=${timeoutMilliSeconds}
+destFolderInbound=gateway/inbound/
 
 defaultTimeOut=5000
